a lot of changes.

--- a/app/views/layouts/_foot.html.erb
+++ b/app/views/layouts/_foot.html.erb
@@ -1,79 +1,30 @@
 <!-- a little javascript to make sidebar nav stick -->
 <script>
-$('#sidebar').affix({
+$('.sidebar').affix({
       offset: {
         top: $('#overview').height()
       }
 });
 </script>
 
+<%= render 'pages/knowledge' %>
+<%= render 'pages/skills' %>
+<%= render 'pages/education' %>
+<%= render 'pages/employment' %>
 
 
-<!-- Begin Knowledge Stack -->
+<!-- Responsive SVG resizing without re-rendering -->
 <script>
-var margin = {top: 20, right: 20, bottom: 30, left: 40},
-    width = 600 - margin.left - margin.right,
-    height = 500 - margin.top - margin.bottom;
-
-var x = d3.scale.ordinal()
-    .rangeRoundBands([0, width], .1);
-
-var y = d3.scale.linear()
-    .range([height, 0]);
-
-var xAxis = d3.svg.axis()
-    .scale(x)
-    .orient("bottom");
-
-var yAxis = d3.svg.axis()
-    .scale(y)
-    .orient("left")
-    .ticks(10, "%");
-
-var svg = d3.select("#knowledge").append("svg")
-    .attr("width", width + margin.left + margin.right)
-    .attr("height", height + margin.top + margin.bottom)
-  .append("g")
-    .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
-
-d3.tsv("data.tsv", type, function(error, data) {
-  x.domain(data.map(function(d) { return d.letter; }));
-  y.domain([0, d3.max(data, function(d) { return d.frequency; })]);
-
-  svg.append("g")
-      .attr("class", "x axis")
-      .attr("transform", "translate(0," + height + ")")
-      .call(xAxis);
-
-  svg.append("g")
-      .attr("class", "y axis")
-      .call(yAxis)
-    .append("text")
-      .attr("transform", "rotate(-90)")
-      .attr("y", 6)
-      .attr("dy", ".71em")
-      .style("text-anchor", "end")
-      .text("Frequency");
-
-  svg.selectAll(".bar")
-      .data(data)
-    .enter().append("rect")
-      .attr("class", "bar")
-      .attr("x", function(d) { return x(d.letter); })
-      .attr("width", x.rangeBand())
-      .attr("y", function(d) { return y(d.frequency); })
-      .attr("height", function(d) { return height - y(d.frequency); });
-
-});
-
-function type(d) {
-  d.frequency = +d.frequency;
-  return d;
-}
+var chart = $(".venn"),
+    aspect = chart.width() / chart.height(),
+    container = chart.parent();
+$(window).on("resize", function() {
+    var targetWidth = container.width();
+    chart.attr("width", targetWidth);
+    chart.attr("height", Math.round(targetWidth / aspect));
+}).trigger("resize");
 </script>
-<!-- End Knowledge Stack -->
-
-<%= render 'layouts/skills' %>
+<!-- Responsive SVG resizing without re-rendering -->
 
 <!-- Begin Google Analytics -->
 <script>
@@ -84,6 +35,5 @@ m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
 
 ga('create', 'UA-34559364-3', 'schipperius.info');
 ga('send', 'pageview');
-</script>
-<!-- End Google Analytics -->
+</script><!-- End Google Analytics -->
 <!-- End JavaScript -->
