--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 
 <!DOCTYPE html>
 
-<html lang="en">
+<html lang="en" xmlns:xlink="http://www.w3.org/1999/xlink">
 
 <head>
 	<%= render 'layouts/head' %>
@@ -14,7 +14,7 @@
 		<%= render 'layouts/header' %>
 	</header>
 
-	<main>
+	<main class="container">
     <%= yield %>
   </main>
 
