--- a/app/views/pages/_knowledge.html.erb
+++ b/app/views/pages/_knowledge.html.erb
@@ -1,132 +1,320 @@
-<div class="tab-content">
+<script>
+(function() {
 
-  <div class="tab-pane active" id="tab1">
+var margin = {top: 20, right: 20, bottom: 20, left: 170},
+    width = 720 - margin.left - margin.right,
+    height = 500 - margin.top - margin.bottom;
 
-    <script type="text/javascript">
-      google.load("visualization", "1", {packages:["corechart"]});
-      google.setOnLoadCallback(drawChart);
-      function drawChart() {
-        var data = google.visualization.arrayToDataTable([
-          ['Knowledge', ''],
-          ['Integrated Business Planning', 13],
-          ['Busienss Process Innovation', 22],
-          ['Product Lifecycle Management', 20],
-          ['New Product Development', 22],
-          ['Project Management', 15],
-          ['Business Analysis', 15],
-          ['Change Management', 24],
-          ['Business Intelligence', 2]
-        ]);
+var x = d3.scale.linear()
+    .range([0, width])
 
-        var options = {
-          title: 'Business Strategy and Tactics',
-          hAxis: {title: 'Years of Practice'},
-          height: 600,
-          width: 800
-        };
+var y = d3.scale.ordinal()
+    .rangeRoundBands([0, height], .1);
 
-        var chart = new google.visualization.BarChart(document.getElementById('chart1'));
-        chart.draw(data, options);
-      }
-    </script>
+var xAxis = d3.svg.axis()
+    .scale(x)
+    .orient("bottom");
 
-    <div id="chart1">
-    </div>
+var yAxis = d3.svg.axis()
+    .scale(y)
+    .orient("left");
 
-  </div>
+var bar1 = d3.select("#knowl_bus").append("svg")
+    .attr("width", width + margin.left + margin.right)
+    .attr("height", height + margin.top + margin.bottom)
+  .append("g")
+    .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
 
-  <div class="tab-pane" id="tab2">
-    <style>
-    .chart div {
-      font: 10px sans-serif;
-      background-color: steelblue;
-      text-align: right;
-      padding: 3px;
-      margin: 1px;
-      color: white;
-    }
-    </style>
-    <div class="chart"></div>
-    <script type="text/javascript">
-    var data = [4, 8, 15, 16, 23, 42];
-    var x = d3.scale.linear()
-        .domain([0, d3.max(data)])
-        .range([0, 420]);
-    d3.select(".chart")
-      .selectAll("div")
-        .data(data)
-      .enter().append("div")
-        .style("width", function(d) { return x(d) + "px"; })
-        .text(function(d) { return d; });
-    </script>
-  </div>
+d3.tsv("knowl_bus.tsv", type, function(error, data) {
+  x.domain([0, d3.max(data, function(d) { return d.frequency; })]);
+  y.domain(data.map(function(d) { return d.letter; }));
 
-  <div class="tab-pane" id="tab3">
-    <script type="text/javascript">
-      google.load("visualization", "1", {packages:["corechart"]});
-      google.setOnLoadCallback(drawChart);
-      function drawChart() {
-        var data = google.visualization.arrayToDataTable([
-          ['Knowledge', ''],
-          ['Content Strategy', 21],
-          ['Information Design', 18],
-          ['User Experience', 18],
-          ['Web Design', 9],
-          ['Web Development', 9]
-        ]);
+  bar1.append("g")
+      .attr("class", "x axis")
+      .attr("transform", "translate(0," + height + ")")
+      .call(xAxis);
 
-        var options = {
-          title: 'Website Architecture',
-          hAxis: {title: 'Years of Practice'},
-          height: 600,
-          width: 800
-        };
+  bar1.append("g")
+      .attr("class", "y axis")
+      .call(yAxis)
+    .append("text")
+      .attr("transform", "rotate(-90)")
+      .attr("y", 6)
+      .attr("dy", ".71em")
+      .style("text-anchor", "end");
 
-        var chart = new google.visualization.BarChart(document.getElementById('chart3'));
-        chart.draw(data, options);
-      }
-    </script>
+  bar1.selectAll(".bar")
+      .data(data)
+    .enter().append("rect")
+      .attr("class", "bar")
+      .attr("y", function(d) { return y(d.letter); })
+      .attr("height", y.rangeBand())
+      .attr("x", function(d) { return x(d.frequency); })
+      .attr("width", function(d) { return width - x(d.frequency); });
 
-    <div id="chart3"></div>
-  </div>
+});
 
-    <div class="tab-pane" id="tab4">
-    <script type="text/javascript">
-      google.load("visualization", "1", {packages:["corechart"]});
-      google.setOnLoadCallback(drawChart);
-      function drawChart() {
-        var data = google.visualization.arrayToDataTable([
-          ['Knowledge', ''],
-          ['Adult Education', 21],
-          ['Educational Technology', 18],
-          ['E-Learning', 18],
-          ['Knowledge and Skills Transfer', 9],
-          ['Curriculum Development', 9],
-          ['Instructional Design', 9],
-          ['Teaching and Training', 9],
-          ['Evaluation', 9],
-        ]);
+function type(d) {
+  d.frequency = +d.frequency;
+  return d;
+}
 
-        var options = {
-          title: 'Learning and Development',
-          hAxis: {title: 'Years of Practice'},
-          height: 600,
-          width: 800
-        };
-
-        var chart = new google.visualization.BarChart(document.getElementById('chart4'));
-        chart.draw(data, options);
-      }
-    </script>
-
-    <div id="chart4"></div>
-  </div>
-
-</div>
+})();
+</script>
 
 
+<!-- Begin Knowledge Stack Bar Chart-->
+<script>
+(function() {
+var margin = {top: 20, right: 20, bottom: 30, left: 40},
+    width = 600 - margin.left - margin.right,
+    height = 500 - margin.top - margin.bottom;
+
+var x = d3.scale.ordinal()
+    .rangeRoundBands([0, width], .1);
+
+var y = d3.scale.linear()
+    .range([height, 0]);
+
+var xAxis = d3.svg.axis()
+    .scale(x)
+    .orient("bottom");
+
+var yAxis = d3.svg.axis()
+    .scale(y)
+    .orient("left")
+    .ticks(10);
+
+var bar1 = d3.select("#knowl_bus").append("svg")
+    .attr("width", width + margin.left + margin.right)
+    .attr("height", height + margin.top + margin.bottom)
+  .append("g")
+    .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
+
+d3.tsv("knowl_bus.tsv", type, function(error, data) {
+  x.domain(data.map(function(d) { return d.letter; }));
+  y.domain([0, d3.max(data, function(d) { return d.frequency; })]);
+
+  bar1.append("g")
+      .attr("class", "x axis")
+      .attr("transform", "translate(0," + height + ")")
+      .call(xAxis);
+
+  bar1.append("g")
+      .attr("class", "y axis")
+      .call(yAxis)
+    .append("text")
+      .attr("transform", "rotate(-90)")
+      .attr("y", 6)
+      .attr("dy", ".71em")
+      .style("text-anchor", "end");
+
+  bar1.selectAll(".bar")
+      .data(data)
+    .enter().append("rect")
+      .attr("class", "bar")
+      .attr("x", function(d) { return x(d.letter); })
+      .attr("width", x.rangeBand())
+      .attr("y", function(d) { return y(d.frequency); })
+      .attr("height", function(d) { return height - y(d.frequency); });
+
+});
+
+function type(d) {
+  d.frequency = +d.frequency;
+  return d;
+}
+})();
+</script>
 
 
 
+<script>
+(function() {
+var margin = {top: 20, right: 20, bottom: 30, left: 40},
+    width = 600 - margin.left - margin.right,
+    height = 500 - margin.top - margin.bottom;
+
+var x = d3.scale.ordinal()
+    .rangeRoundBands([0, width], .1);
+
+var y = d3.scale.linear()
+    .range([height, 0]);
+
+var xAxis = d3.svg.axis()
+    .scale(x)
+    .orient("bottom");
+
+var yAxis = d3.svg.axis()
+    .scale(y)
+    .orient("left")
+    .ticks(10);
+
+var bar2 = d3.select("#knowl_mar").append("svg")
+    .attr("width", width + margin.left + margin.right)
+    .attr("height", height + margin.top + margin.bottom)
+  .append("g")
+    .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
+
+d3.tsv("knowl_mar.tsv", type, function(error, data) {
+  x.domain(data.map(function(d) { return d.letter; }));
+  y.domain([0, d3.max(data, function(d) { return d.frequency; })]);
+
+  bar2.append("g")
+      .attr("class", "x axis")
+      .attr("transform", "translate(0," + height + ")")
+      .call(xAxis);
+
+  bar2.append("g")
+      .attr("class", "y axis")
+      .call(yAxis)
+    .append("text")
+      .attr("transform", "rotate(-90)")
+      .attr("y", 6)
+      .attr("dy", ".71em")
+      .style("text-anchor", "end");
+
+  bar2.selectAll(".bar")
+      .data(data)
+    .enter().append("rect")
+      .attr("class", "bar")
+      .attr("x", function(d) { return x(d.letter); })
+      .attr("width", x.rangeBand())
+      .attr("y", function(d) { return y(d.frequency); })
+      .attr("height", function(d) { return height - y(d.frequency); });
+
+});
+
+function type(d) {
+  d.frequency = +d.frequency;
+  return d;
+}
+})();
+</script>
+
+<script>
+(function() {
+var margin = {top: 20, right: 20, bottom: 30, left: 40},
+    width = 600 - margin.left - margin.right,
+    height = 500 - margin.top - margin.bottom;
+
+var x = d3.scale.ordinal()
+    .rangeRoundBands([0, width], .1);
+
+var y = d3.scale.linear()
+    .range([height, 0]);
+
+var xAxis = d3.svg.axis()
+    .scale(x)
+    .orient("bottom");
+
+var yAxis = d3.svg.axis()
+    .scale(y)
+    .orient("left")
+    .ticks(10);
+
+var bar3 = d3.select("#knowl_tech").append("svg")
+    .attr("width", width + margin.left + margin.right)
+    .attr("height", height + margin.top + margin.bottom)
+  .append("g")
+    .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
+
+d3.tsv("knowl_tech.tsv", type, function(error, data) {
+  x.domain(data.map(function(d) { return d.letter; }));
+  y.domain([0, d3.max(data, function(d) { return d.frequency; })]);
+
+  bar3.append("g")
+      .attr("class", "x axis")
+      .attr("transform", "translate(0," + height + ")")
+      .call(xAxis);
+
+  bar3.append("g")
+      .attr("class", "y axis")
+      .call(yAxis)
+    .append("text")
+      .attr("transform", "rotate(-90)")
+      .attr("y", 6)
+      .attr("dy", ".71em")
+      .style("text-anchor", "end");
+
+  bar3.selectAll(".bar")
+      .data(data)
+    .enter().append("rect")
+      .attr("class", "bar")
+      .attr("x", function(d) { return x(d.letter); })
+      .attr("width", x.rangeBand())
+      .attr("y", function(d) { return y(d.frequency); })
+      .attr("height", function(d) { return height - y(d.frequency); });
+
+});
+
+function type(d) {
+  d.frequency = +d.frequency;
+  return d;
+}
+})();
+</script>
 
 
+<script>
+(function() {
+var margin = {top: 20, right: 20, bottom: 30, left: 40},
+    width = 600 - margin.left - margin.right,
+    height = 500 - margin.top - margin.bottom;
+
+var x = d3.scale.ordinal()
+    .rangeRoundBands([0, width], .1);
+
+var y = d3.scale.linear()
+    .range([height, 0]);
+
+var xAxis = d3.svg.axis()
+    .scale(x)
+    .orient("bottom");
+
+var yAxis = d3.svg.axis()
+    .scale(y)
+    .orient("left")
+    .ticks(10);
+
+var bar4 = d3.select("#knowl_learn").append("svg")
+    .attr("width", width + margin.left + margin.right)
+    .attr("height", height + margin.top + margin.bottom)
+  .append("g")
+    .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
+
+d3.tsv("knowl_learn.tsv", type, function(error, data) {
+  x.domain(data.map(function(d) { return d.letter; }));
+  y.domain([0, d3.max(data, function(d) { return d.frequency; })]);
+
+  bar4.append("g")
+      .attr("class", "x axis")
+      .attr("transform", "translate(0," + height + ")")
+      .call(xAxis);
+
+  bar4.append("g")
+      .attr("class", "y axis")
+      .call(yAxis)
+    .append("text")
+      .attr("transform", "rotate(-90)")
+      .attr("y", 6)
+      .attr("dy", ".71em")
+      .style("text-anchor", "end");
+
+  bar4.selectAll(".bar")
+      .data(data)
+    .enter().append("rect")
+      .attr("class", "bar")
+      .attr("x", function(d) { return x(d.letter); })
+      .attr("width", x.rangeBand())
+      .attr("y", function(d) { return y(d.frequency); })
+      .attr("height", function(d) { return height - y(d.frequency); });
+
+});
+
+function type(d) {
+  d.frequency = +d.frequency;
+  return d;
+}
+})();
+</script>
