--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -8,39 +8,123 @@ body {
 .pic {
 	width: 210px;
 	height: 280px;
-  margin-top: 20px;
 }
 
-.venn {
-  margin-top: 50px;
-}
+/*
+ * Side navigation
+ *
+ * Scrollspy and affixed enhanced navigation to highlight sections and secondary
+ * sections of docs content.
+ */
 
-
-#sidebar {
-  width: 225px;
-}
-
-#sidebar.affix-top {
+/* By default it's not affixed in mobile views, so undo that */
+.sidebar.affix {
   position: static;
 }
 
-#sidebar.affix {
-  position: fixed;
-  top:70px;
+/* First level of nav */
+.sidenav {
+  margin-top: 0px;
+  margin-bottom: 0px;
+  padding-top:    10px;
+  padding-bottom: 10px;
+  text-shadow: 0 1px 0 #fff;
+  background-color: #f7f5fa;
+  border-radius: 5px;
 }
 
-/*  Begin Bar Charts */
-
-.bar {
-  fill: steelblue;
+/* All levels of nav */
+.sidebar .nav > li > a {
+  display: block;
+  color: #716b7a;
+  padding: 5px 20px;
+}
+.sidebar .nav > li > a:hover,
+.sidebar .nav > li > a:focus {
+  text-decoration: none;
+  background-color: #e5e3e9;
+  border-right: 1px solid #dbd8e0;
+}
+.sidebar .nav > .active > a,
+.sidebar .nav > .active:hover > a,
+.sidebar .nav > .active:focus > a {
+  font-weight: bold;
+  color: #563d7c;
+  background-color: transparent;
+  border-right: 5px solid #563d7c;
 }
 
-.bar:hover {
-  fill: brown;
+/* Nav: second level (shown on .active) */
+.sidebar .nav .nav {
+  display: none; /* Hide by default, but at >768px, show it */
+  margin-bottom: 8px;
+}
+.sidebar .nav .nav > li > a {
+  padding-top:    3px;
+  padding-bottom: 3px;
+  padding-left: 30px;
+  font-size: 90%;
+}
+
+/* Show and affix the side nav when space allows it */
+@media (min-width: 992px) {
+  .sidebar .nav > .active > ul {
+    display: block;
+  }
+  /* Widen the fixed sidebar */
+  .sidebar.affix,
+  .sidebar.affix-bottom {
+    width: 213px;
+  }
+  .sidebar.affix {
+    position: fixed; /* Undo the static from mobile first approach */
+    top: 70px;
+  }
+  .sidebar.affix-bottom {
+    position: absolute; /* Undo the static from mobile first approach */
+  }
+  .sidebar.affix-bottom .sidenav,
+  .sidebar.affix .sidenav {
+    margin-top: 0;
+    margin-bottom: 0;
+  }
+}
+@media (min-width: 1200px) {
+  /* Widen the fixed sidebar again */
+  .sidebar.affix-bottom,
+  .sidebar.affix {
+    width: 263px;
+  }
+}
+
+/* End sticky subnav sidebar */
+/*
+*
+*
+*
+*/
+
+/* Begin Bar Charts */
+
+.value {
+  fill: white;
 }
 
 .axis {
-  font: 10px sans-serif;
+  shape-rendering: crispEdges;
+}
+
+.axis path {
+  stroke: none;
+}
+
+.x.axis line {
+  stroke: #fff;
+  stroke-opacity: .8;
+}
+
+.y.axis path {
+  stroke: black;
 }
 
 .axis path,
@@ -50,13 +134,33 @@ body {
   shape-rendering: crispEdges;
 }
 
+
+
+.bar {
+  fill: steelblue;
+}
+
+.bar:hover {
+  fill: brown;
+}
+
+.axis text {
+  font: 10px sans-serif;
+}
+
+.axis {
+  font: 10px sans-serif;
+}
+
 .x.axis path {
   display: none;
 }
 
+
+
 /*  End Bar Charts */
 
-/*  Begin Bubble Charts */
+/*  Begin Bubble Skills Charts */
 
 text {
   font-size: 14px;
@@ -88,4 +192,76 @@ circle.child {
   pointer-events: none;
 }
 
-/*  End Bubble Charts */
+/*  End Bubble Skills Charts */
+
+/*  Begin Education Flare */
+
+.node {
+  cursor: pointer;
+}
+
+.node circle {
+  fill: #fff;
+  stroke: steelblue;
+  stroke-width: 1.5px;
+}
+
+.node text {
+  font: 14px sans-serif;
+}
+
+.link {
+  fill: none;
+  stroke: #ccc;
+  stroke-width: 1.5px;
+}
+
+/*  End Education Flare */
+
+/*  Begin Employment Swim Lanes */
+
+.chart {
+  shape-rendering: crispEdges;
+}
+
+.mini text {
+  font: 9px sans-serif;
+}
+
+.main text {
+  font: 12px sans-serif;
+}
+
+.month text {
+  text-anchor: start;
+}
+
+.todayLine {
+  stroke: blue;
+  stroke-width: 1.5;
+}
+
+.axis line, .axis path {
+  stroke: black;
+}
+
+.miniItem {
+  stroke-width: 6;
+}
+
+.future {
+  stroke: gray;
+  fill: #ddd;
+}
+
+.past {
+  stroke: green;
+  fill: lightgreen;
+}
+
+.brush .extent {
+  stroke: gray;
+  fill: blue;
+  fill-opacity: .165;
+}
+/*  End Employment Swim Lanes */
