--- a/app/views/pages/_education.html.erb
+++ b/app/views/pages/_education.html.erb
@@ -1,33 +1,9 @@
+<!-- d3.js Denogram Tree Layout for Education Section -->
+<script type="text/javascript">
 
-<style>
-
-.node {
-  cursor: pointer;
-}
-
-.node circle {
-  fill: #fff;
-  stroke: steelblue;
-  stroke-width: 1.5px;
-}
-
-.node text {
-  font: 14px sans-serif;
-}
-
-.link {
-  fill: none;
-  stroke: #ccc;
-  stroke-width: 1.5px;
-}
-
-</style>
-
-<script>
-
-var margin = {top: 20, right: 120, bottom: 20, left: 120},
-    width = 960 - margin.right - margin.left,
-    height = 800 - margin.top - margin.bottom;
+var margin = {top: 0, right: 120, bottom: 20, left: 120},
+    width = 500 - margin.right - margin.left,
+    height = 500 - margin.top - margin.bottom;
 
 var i = 0,
     duration = 750,
@@ -39,7 +15,7 @@ var tree = d3.layout.tree()
 var diagonal = d3.svg.diagonal()
     .projection(function(d) { return [d.y, d.x]; });
 
-var svg = d3.select("#edu").append("svg")
+var edu = d3.select("#flare").append("svg")
     .attr("width", width + margin.right + margin.left)
     .attr("height", height + margin.top + margin.bottom)
     .append("g")
@@ -62,7 +38,7 @@ d3.json("education.json", function(error, education) {
   update(root);
 });
 
-d3.select(self.frameElement).style("height", "800px");
+d3.select(self.frameElement).style("height", "500px");
 
 function update(source) {
 
@@ -71,10 +47,10 @@ function update(source) {
       links = tree.links(nodes);
 
   // Normalize for fixed-depth.
-  nodes.forEach(function(d) { d.y = d.depth * 180; });
+  nodes.forEach(function(d) { d.y = d.depth * 90; });
 
   // Update the nodes…
-  var node = svg.selectAll("g.node")
+  var node = edu.selectAll("g.node")
       .data(nodes, function(d) { return d.id || (d.id = ++i); });
 
   // Enter any new nodes at the parent's previous position.
@@ -119,7 +95,7 @@ function update(source) {
       .style("fill-opacity", 1e-6);
 
   // Update the links…
-  var link = svg.selectAll("path.link")
+  var link = edu.selectAll("path.link")
       .data(links, function(d) { return d.target.id; });
 
   // Enter any new links at the parent's previous position.
@@ -164,3 +140,4 @@ function click(d) {
 }
 
 </script>
+<!-- End Learning Paths -->
