--- a/app/views/pages/_tshaped.html.erb
+++ b/app/views/pages/_tshaped.html.erb
@@ -1,8 +1,41 @@
 
+<script>
+
+var width = 449;
+var height = 249;
+var word = "gongoozler";
+
+var holder = d3.select("tshaped")
+      .append("svg")
+      .attr("width", width)
+      .attr("height", height);
+
+// draw a rectangle
+holder.append("rect")
+    .attr("x", 100)
+    .attr("y", 50)
+    .attr("height", 100)
+    .attr("width", 200)
+    .style("fill", "lightgreen")
+    .attr("rx", 10)
+    .attr("ry", 10);
+
+// draw text on the screen
+holder.append("text")
+    .attr("x", 200)
+    .attr("y", 100)
+    .style("fill", "black")
+    .style("font-size", "20px")
+    .attr("dy", ".35em")
+    .attr("text-anchor", "middle")
+    .text(word);
+
+</script>
+
 <script type="text/javascript">
 
-  var width = 640,
-      height = 120;
+  var width = 500,
+      height = 90;
 
   var svg = d3.select("#tshaped")
     .append("svg:svg")
@@ -10,39 +43,41 @@
     .attr("height", height);
 
   svg.append("svg:a")
-    .attr("xlink:href", "#knowledge")
-    .append("rect")
-    .attr("x", 0)
-    .attr("y", 0)
-    .attr("height", 100)
-    .attr("width", 150)
-    .attr("rx", 15)
-    .attr("ry", 15)
-    .style("fill", "steelblue")
-    .style("fill-opacity", ".5");
+    .attr("xlink:href", "/#knowledge")
+    .append("svg:rect")
+      .attr("x", 0)
+      .attr("y", 0)
+      .attr("height", 90)
+      .attr("width", 120)
+      .attr("rx", 15)
+      .attr("ry", 15)
+      .style("fill", "steelblue")
+      .style("fill-opacity", ".5");
 
    svg.append("svg:text")
-      .attr("x", 75)
-      .attr("y", 40)
+      .attr("x", 60)
+      .attr("y", 35)
       .attr("dy", "1em")
       .attr("text-anchor", "middle")
       .style("font", "16px Helvetica Neue")
       .style("fill", "white")
-      .text("Learning");
+      .text("Business");
+
+
 
     svg.append("svg:rect")
-    .attr("x", 160)
+    .attr("x", 120)
     .attr("y", 0)
-    .attr("height", 100)
-    .attr("width", 150)
+    .attr("height", 90)
+    .attr("width", 120)
     .attr("rx", 15)
     .attr("ry", 15)
     .style("fill", "steelblue")
     .style("fill-opacity", ".5");
 
   var text = svg.append("svg:text")
-    .attr("x", 235)
-    .attr("y", 40)
+    .attr("x", 180)
+    .attr("y", 35)
     .attr("dy", "1em")
     .attr("text-anchor", "middle")
     .style("font", "16px Helvetica Neue")
@@ -51,100 +86,91 @@
 
 
     svg.append("svg:rect")
-    .attr("x", 320)
+    .attr("x", 240)
     .attr("y", 0)
-    .attr("height", 100)
-    .attr("width", 150)
+    .attr("height", 90)
+    .attr("width", 120)
     .attr("rx", 15)
     .attr("ry", 15)
     .style("fill", "steelblue")
     .style("fill-opacity", ".5");
 
   var text = svg.append("svg:text")
-    .attr("x", 395)
-    .attr("y", 40)
-    .attr("dy", "1em")
-    .attr("text-anchor", "middle")
-    .style("font", "16px Helvetica Neue")
-    .style("fill", "white")
-    .text("Business");
-
-    svg.append("svg:rect")
-    .attr("x", 480)
-    .attr("y", 0)
-    .attr("height", 100)
-    .attr("width", 150)
-    .attr("rx", 15)
-    .attr("ry", 15)
-    .style("fill", "steelblue")
-    .style("fill-opacity", ".5");
-
-  var text = svg.append("svg:text")
-    .attr("x", 555)
-    .attr("y", 40)
+    .attr("x", 300)
+    .attr("y", 35)
     .attr("dy", "1em")
     .attr("text-anchor", "middle")
     .style("font", "16px Helvetica Neue")
     .style("fill", "white")
     .text("Technology");
 
-  var bbox = text.node().getBBox();
-
-</script>
-
-<script type="text/javascript">
-
-  var w = 640,
-      h = 110;
-
-  var svg = d3.select("#tshaped").append("svg:svg")
-    .attr("width", w)
-    .attr("height", h);
-
-  svg.append("svg:rect")
-    .attr("x", 240)
+    svg.append("svg:rect")
+    .attr("x", 360)
     .attr("y", 0)
-    .attr("height", 100)
-    .attr("width", 150)
+    .attr("height", 90)
+    .attr("width", 120)
     .attr("rx", 15)
     .attr("ry", 15)
     .style("fill", "steelblue")
     .style("fill-opacity", ".5");
 
   var text = svg.append("svg:text")
-    .attr("x", 310)
-    .attr("y", 40)
+    .attr("x", 420)
+    .attr("y", 35)
+    .attr("dy", "1em")
+    .attr("text-anchor", "middle")
+    .style("font", "16px Helvetica Neue")
+    .style("fill", "white")
+    .text("Education");
+
+
+//////
+
+  var w = 500,
+      h = 90;
+
+  var svg = d3.select("#tshaped")
+    .append("svg:svg")
+    .attr("width", w)
+    .attr("height", h);
+
+  svg.append("svg:rect")
+    .attr("x", 180)
+    .attr("y", 0)
+    .attr("height", 90)
+    .attr("width", 120)
+    .attr("rx", 15)
+    .attr("ry", 15)
+    .style("fill", "steelblue")
+    .style("fill-opacity", ".5");
+
+  var text = svg.append("svg:text")
+    .attr("x", 240)
+    .attr("y", 35)
     .attr("dy", "1em")
     .attr("text-anchor", "middle")
     .style("font", "16px Helvetica Neue")
     .style("fill", "white")
     .text("Communication");
 
-  var bbox = text.node().getBBox();
 
-</script>
-
-<script type="text/javascript">
-
-  var w = 640,
-      h = 110;
-
-  var svg = d3.select("#tshaped").append("svg:svg")
+  var svg = d3.select("#tshaped")
+    .append("svg:svg")
     .attr("width", w)
     .attr("height", h);
 
   svg.append("svg:rect")
-    .attr("x", 240)
+    .attr("x", 180)
     .attr("y", 0)
-    .attr("height", 100)
-    .attr("width", 150)
+    .attr("height", 90)
+    .attr("width", 120)
     .attr("rx", 15)
     .attr("ry", 15)
     .style("fill", "steelblue")
     .style("fill-opacity", ".5");
 
   var text = svg.append("svg:text")
-    .attr("x", 315)
+    .attr("x", 240)
     .attr("y", 30)
     .attr("dy", "1em")
     .attr("text-anchor", "middle")
@@ -153,39 +179,32 @@
     .text("Information");
 
   var text = svg.append("svg:text")
-    .attr("x", 315)
-    .attr("y", 47)
+    .attr("x", 240)
+    .attr("y", 45)
     .attr("dy", "1em")
     .attr("text-anchor", "middle")
     .style("font", "16px Helvetica Neue")
     .style("fill", "white")
     .text("Management");
 
-  var bbox = text.node().getBBox();
 
-</script>
-
-<script type="text/javascript">
-
-  var w = 640,
-      h = 110;
-
-  var svg = d3.select("#tshaped").append("svg:svg")
+  var svg = d3.select("#tshaped")
+    .append("svg:svg")
     .attr("width", w)
     .attr("height", h);
 
   svg.append("svg:rect")
-    .attr("x", 240)
+    .attr("x", 180)
     .attr("y", 0)
-    .attr("height", 100)
-    .attr("width", 150)
+    .attr("height", 90)
+    .attr("width", 120)
     .attr("rx", 15)
     .attr("ry", 15)
     .style("fill", "steelblue")
     .style("fill-opacity", ".5");
 
   var text = svg.append("svg:text")
-    .attr("x", 315)
+    .attr("x", 240)
     .attr("y", 30)
     .attr("dy", "1em")
     .attr("text-anchor", "middle")
@@ -194,39 +213,32 @@
     .text("Organization");
 
   var text = svg.append("svg:text")
-    .attr("x", 315)
-    .attr("y", 47)
+    .attr("x", 240)
+    .attr("y", 45)
     .attr("dy", "1em")
     .attr("text-anchor", "middle")
     .style("font", "16px Helvetica Neue")
     .style("fill", "white")
     .text("Management");
 
-  var bbox = text.node().getBBox();
 
-</script>
-
-<script type="text/javascript">
-
-  var w = 640,
-      h = 110;
-
-  var svg = d3.select("#tshaped").append("svg:svg")
+  var svg = d3.select("#tshaped")
+    .append("svg:svg")
     .attr("width", w)
     .attr("height", h);
 
   svg.append("svg:rect")
-    .attr("x", 240)
+    .attr("x", 180)
     .attr("y", 0)
-    .attr("height", 100)
-    .attr("width", 150)
+    .attr("height", 90)
+    .attr("width", 120)
     .attr("rx", 15)
     .attr("ry", 15)
     .style("fill", "steelblue")
     .style("fill-opacity", ".5");
 
   var text = svg.append("svg:text")
-    .attr("x", 315)
+    .attr("x", 240)
     .attr("y", 30)
     .attr("dy", "1em")
     .attr("text-anchor", "middle")
@@ -235,39 +247,31 @@
     .text("Design and");
 
   var text = svg.append("svg:text")
-    .attr("x", 315)
-    .attr("y", 47)
+    .attr("x", 240)
+    .attr("y", 45)
     .attr("dy", "1em")
     .attr("text-anchor", "middle")
     .style("font", "16px Helvetica Neue")
     .style("fill", "white")
     .text("Planning");
 
-  var bbox = text.node().getBBox();
-
-</script>
-
-<script type="text/javascript">
-
-  var w = 640,
-      h = 110;
-
-  var svg = d3.select("#tshaped").append("svg:svg")
+  var svg = d3.select("#tshaped")
+    .append("svg:svg")
     .attr("width", w)
     .attr("height", h);
 
   svg.append("svg:rect")
-    .attr("x", 240)
+    .attr("x", 180)
     .attr("y", 0)
-    .attr("height", 100)
-    .attr("width", 150)
+    .attr("height", 90)
+    .attr("width", 120)
     .attr("rx", 15)
     .attr("ry", 15)
     .style("fill", "steelblue")
     .style("fill-opacity", ".5");
 
   var text = svg.append("svg:text")
-    .attr("x", 315)
+    .attr("x", 240)
     .attr("y", 30)
     .attr("dy", "1em")
     .attr("text-anchor", "middle")
@@ -276,8 +280,8 @@
     .text("Research and");
 
   var text = svg.append("svg:text")
-    .attr("x", 315)
-    .attr("y", 47)
+    .attr("x", 240)
+    .attr("y", 45)
     .attr("dy", "1em")
     .attr("text-anchor", "middle")
     .style("font", "16px Helvetica Neue")
