minor css fixes.

--- a/app/views/layouts/_foot.html.erb
+++ b/app/views/layouts/_foot.html.erb
@@ -15,7 +15,7 @@ $('.sidebar').affix({
 
 <!-- Responsive SVG resizing without re-rendering -->
 <script>
-var chart = $(".venn"),
+var chart = $(""),
     aspect = chart.width() / chart.height(),
     container = chart.parent();
 $(window).on("resize", function() {
